improve content analysis for DataReaders