@@ -324,6 +324,17 @@ public class TestDataReaderFactory {
     }
 
     @Test
+    public void testOracleG1J8ApplicationThreadsStopped() throws Exception {
+        // logs with -XX:+PrintGCApplicationStoppedTime often start with a lot of "Total time for which ..." lines
+        DataReaderFactory factory = new DataReaderFactory();
+        DataReader dr = factory.getDataReader(new GcResourceFile("byteArray"), new ByteArrayInputStream(("Java HotSpot(TM) 64-Bit Server VM (25.112-b15) for windows-amd64 JRE (1.8.0_112-b15), built on Sep 22 2016 21:31:56 by \"java_re\" with MS VC++ 10.0 (VS2010)\n" +
+                "Memory: 4k page, physical 50331128k(13997304k free), swap 60569268k(13009848k free)\n" +
+                "CommandLine flags: -XX:CICompilerCount=4 -XX:ConcGCThreads=3 -XX:G1HeapRegionSize=2097152 -XX:GCLogFileSize=1048576 -XX:InitialHeapSize=4294967296 -XX:+ManagementServer -XX:MarkStackSize=4194304 -XX:MaxHeapSize=8589934592 -XX:MaxNewSize=5152702464 -XX:MinHeapDeltaBytes=2097152 -XX:NumberOfGCLogFiles=5 -XX:-OmitStackTraceInFastThrow -XX:+ParallelRefProcEnabled -XX:+PrintGC -XX:+PrintGCDateStamps -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintTenuringDistribution -XX:+ReduceSignalUsage -XX:+UseCompressedClassPointers -XX:+UseCompressedOops -XX:+UseFastUnorderedTimeStamps -XX:+UseG1GC -XX:+UseGCLogFileRotation -XX:-UseLargePagesIndividualAllocation\n" +
+                "2019-12-15T15:53:20.985+0100: 82113.171: Total time for which application threads were stopped: 0.0019721 seconds, Stopping threads took: 0.0001040 seconds\n\n").getBytes()));
+        assertDataReader(DataReaderSun1_6_0G1.class, dr.getClass());
+    }
+
+    @Test
     public void testOracleG1J8_StringDeduplication() throws Exception {
         DataReaderFactory factory = new DataReaderFactory();
         DataReader dr = factory.getDataReader(new GcResourceFile("byteArray"),
